@@ -1,8 +1,3 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
 package PL;
 
 import org.junit.Test;
@@ -28,45 +23,43 @@ public class AVLTest {
     public void testInsert() {
         System.out.println("insert");
 
-        //test Simple right rotation 
-        AVL<Integer> instance = new AVL();
-        int arr[] = {8,4,10,2,6,3};
+        //test Simple right rotation
+        AVL<Integer> instance = new AVL<>();
+        int[] arr = {8,4,10,2,6,3};
         Integer[] inorder1={2,3,4,6,8,10};
-        for (int i=0; i<arr.length; i++)            //new elements
-            instance.insert(arr[i]);
+        //new elements
+        for (int j : arr) instance.insert(j);
 
         List<Integer> lExpected = Arrays.asList(inorder1);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         System.out.println("<instance 1>");
         System.out.println(instance);
         System.out.println("height1="+instance.height());
         System.out.println("------------------------------------");
 
         //test Simple left rotation
-        AVL<Integer> instance2 = new AVL();
-        int arr2[] = {8,4,10,9,15,12};
+        AVL<Integer> instance2 = new AVL<>();
+        int[] arr2 = {8,4,10,9,15,12};
         Integer[] inorder2={4,8,9,10,12,15};
-        for (int i=0; i<arr2.length; i++)
-            instance2.insert(arr2[i]);
+        for (int j : arr2) instance2.insert(j);
         System.out.println("<instance 2>");
         System.out.println(instance2);
         System.out.println("height2="+instance2.height());
         lExpected = Arrays.asList(inorder2);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance2.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance2.inOrder());
         assertEquals("height should be 2 ",instance2.height(), 2);
         System.out.println("------------------------------------");
 
-        //test double rotation 
-        AVL<Integer> instance3 = new AVL();
-        int arr3[] = {8,4,10,2,6,5};
+        //test double rotation
+        AVL<Integer> instance3 = new AVL<>();
+        int[] arr3 = {8,4,10,2,6,5};
         Integer[] inorder3={2,4,5,6,8,10};
-        for (int i=0; i<arr3.length; i++)
-            instance3.insert(arr3[i]);
+        for (int j : arr3) instance3.insert(j);
         System.out.println("<instance 3>");
         System.out.println(instance3);
         System.out.println("height3="+instance3.height());
         lExpected = Arrays.asList(inorder3);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance3.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance3.inOrder());
         assertEquals("height should be 2 ",instance3.height(), 2);
         System.out.println("------------------------------------");
     }
@@ -79,42 +72,41 @@ public class AVLTest {
         List<Integer> lExpected;
         AVL<Integer> instance;
 
-        instance = new AVL();
-        int arr[] = {8,4,10,2,6,3};
-        for (int i=0; i<arr.length; i++)
-            instance.insert(arr[i]);
+        instance = new AVL<>();
+        int[] arr  = {8,4,10,2,6,3};
+        for (int j : arr) instance.insert(j);
 
 
         //no rotations needed
         instance.remove(3);
         lExpected = Arrays.asList(2,4,6,8,10);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 2 ",instance.height(), 2);
 
-        //test Simple left rotation 
+        //test Simple left rotation
         instance.remove(2);
         lExpected = Arrays.asList(4,6,8,10);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 2 ",instance.height(), 2);
 
         instance.remove(10);
         lExpected = Arrays.asList(4,6,8);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 1 ",instance.height(), 1);
 
         instance.remove(6);
         lExpected = Arrays.asList(4,8);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 1 ", 1, instance.height());
 
         instance.remove(4);
-        lExpected = Arrays.asList(8);
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        lExpected = List.of(8);
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 1 ", 0, instance.height());
 
         instance.remove(8);
-        lExpected = Arrays.asList();
-        assertEquals("inOrder should be "+lExpected.toString(), lExpected, instance.inOrder());
+        lExpected = List.of();
+        assertEquals("inOrder should be "+lExpected, lExpected, instance.inOrder());
         assertEquals("height should be 1 ", -1, instance.height());
 
         System.out.println("------------------------------------");
@@ -123,20 +115,18 @@ public class AVLTest {
     @Test
     public void testEquals() {
         System.out.println("equals");
-        AVL<Integer> instance = new AVL();
-        int arr[] = {1, 8};
-        for (int i = 0; i < arr.length; i++)
-        {
-            instance.insert(arr[i]);
+        AVL<Integer> instance = new AVL<>();
+        int[] arr  = {1, 8};
+        for (int j : arr) {
+            instance.insert(j);
         }
-        AVL<Integer> instance2 = new AVL();
-        int arr2[] = {1, 8};
-        for (int i = 0; i < arr2.length; i++)
-        {
-            instance2.insert(arr2[i]);
+        AVL<Integer> instance2 = new AVL<>();
+        int[] arr2 = {1, 8};
+        for (int j : arr2) {
+            instance2.insert(j);
         }
-        assertTrue("equals! ", instance.equals(instance2));
+        assertEquals("equals! ", instance, instance2);
         instance2.remove(8);
-        assertFalse("equals! ", instance.equals(instance2));
+        assertNotEquals("equals! ", instance, instance2);
     }
 }
